# nets-personal-assist

./: .env.example  .gitignore  Cargo.toml  README.md
.cargo/: audit.toml
.github/: dependabot.yml
.github/workflows/: ci.yml
src/: config.rs  main.rs
src/commands/: identity.rs  mod.rs  moderation.rs  network.rs  player_stats.rs  system.rs  time_date.rs
src/db/: mod.rs  models.rs  queries.rs
src/services/: cache.rs  ip_intel.rs  mod.rs  roblox_api.rs  scanner.rs  sysinfo.rs
src/utils/: time.rs
